--- a/blog.html
+++ b/blog.html
@@ -102,7 +102,7 @@
         <div class="header-nav-wrapper navbar-scrolltofixed bg-white">
           <div class="container">
             <nav id="menuzord-right" class="menuzord default">
-              <a class="menuzord-brand pull-left flip" href="javascript:void(0)">
+              <a class="menuzord-brand pull-left flip" href="/">
                 <img src="images/mainimages/Logo_transparent.png" alt="logoimage" />
               </a>
               <ul class="menuzord-menu">
@@ -138,9 +138,7 @@
                 <li>
                   <a href="404.html">career</a>
                 </li>
-                <li>
-                  <a href="gallery.html">Gallery</a>
-                </li>
+                
                 <li class="active">
                   <a href="blog.html">blog</a>
                 </li>
@@ -196,7 +194,7 @@
                       <h5 class="font-16 title"><a href="#"> Conferences 2023</a></h5>
                       <ul class="list-inline font-11 mb-20">
                         <li><i class="fa fa-calendar mr-5"></i> DEC 31/2023</li>
-                        <li><i class="fa fa-map-marker mr-5"></i> 89 KANNUR.</li>
+                        <li><i class="fa fa-map-marker mr-5"></i> KANNUR.</li>
                       </ul>
                       <p>Lorem ipsum dolor sit amet elit. Cum veritatis sequi nulla nihil, dolor voluptatum nemo
                         adipisci eligendi! Sed nisi perferendis, totam harum dicta.</p>
@@ -219,7 +217,7 @@
                       <h5 class="font-16 title"><a href="#">Business Conferences 2023</a></h5>
                       <ul class="list-inline font-11 mb-20">
                         <li><i class="fa fa-calendar mr-5"></i> DEC 31/2023</li>
-                        <li><i class="fa fa-map-marker mr-5"></i> 89 KANNUR.</li>
+                        <li><i class="fa fa-map-marker mr-5"></i> KANNUR.</li>
                       </ul>
                       <p>Lorem ipsum dolor sit amet elit. Cum veritatis sequi nulla nihil, dolor voluptatum nemo
                         adipisci eligendi! Sed nisi perferendis, totam harum dicta.</p>
@@ -242,7 +240,7 @@
                       <h5 class="font-16 title"><a href="#">Business Conferences 2023</a></h5>
                       <ul class="list-inline font-11 mb-20">
                         <li><i class="fa fa-calendar mr-5"></i> DEC 31/2023</li>
-                        <li><i class="fa fa-map-marker mr-5"></i> 89 KANNUR.</li>
+                        <li><i class="fa fa-map-marker mr-5"></i> KANNUR.</li>
                       </ul>
                       <p>Lorem ipsum dolor sit amet elit. Cum veritatis sequi nulla nihil, dolor voluptatum nemo
                         adipisci eligendi! Sed nisi perferendis, totam harum dicta.</p>
@@ -265,7 +263,7 @@
                       <h5 class="font-16 title"><a href="#">Business Conferences 2023</a></h5>
                       <ul class="list-inline font-11 mb-20">
                         <li><i class="fa fa-calendar mr-5"></i> DEC 31/2023</li>
-                        <li><i class="fa fa-map-marker mr-5"></i> 89 KANNUR.</li>
+                        <li><i class="fa fa-map-marker mr-5"></i> KANNUR.</li>
                       </ul>
                       <p>Lorem ipsum dolor sit amet elit. Cum veritatis sequi nulla nihil, dolor voluptatum nemo
                         adipisci eligendi! Sed nisi perferendis, totam harum dicta.</p>
@@ -288,7 +286,7 @@
                       <h5 class="font-16 title"><a href="#">Business Conferences 2023</a></h5>
                       <ul class="list-inline font-11 mb-20">
                         <li><i class="fa fa-calendar mr-5"></i> DEC 31/2023</li>
-                        <li><i class="fa fa-map-marker mr-5"></i> 89 KANNUR.</li>
+                        <li><i class="fa fa-map-marker mr-5"></i> KANNUR.</li>
                       </ul>
                       <p>Lorem ipsum dolor sit amet elit. Cum veritatis sequi nulla nihil, dolor voluptatum nemo
                         adipisci eligendi! Sed nisi perferendis, totam harum dicta.</p>
@@ -311,7 +309,7 @@
                       <h5 class="font-16 title"><a href="#">Business Conferences 2023</a></h5>
                       <ul class="list-inline font-11 mb-20">
                         <li><i class="fa fa-calendar mr-5"></i> DEC 31/2023</li>
-                        <li><i class="fa fa-map-marker mr-5"></i> 89 KANNUR.</li>
+                        <li><i class="fa fa-map-marker mr-5"></i> KANNUR.</li>
                       </ul>
                       <p>Lorem ipsum dolor sit amet elit. Cum veritatis sequi nulla nihil, dolor voluptatum nemo
                         adipisci eligendi! Sed nisi perferendis, totam harum dicta.</p>
@@ -447,7 +445,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="about.html">About us</a></li>
                 <li><a href="course.html">Courses</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
+                
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
@@ -471,7 +469,7 @@
         <div class="container pt-10 pb-0">
           <div class="row">
             <div class="col-md-6 sm-text-center">
-              <p class="mb-4">
+              <p hidden class="mb-4">
                 &copy;
                 <a class="font-13 text-black-777 m-0" href="https://prospireeducation.in/">Prospire</a>. All Rights
                 Reserved. Designed by
