--- a/course.html
+++ b/course.html
@@ -82,7 +82,7 @@
         <div class="header-nav-wrapper navbar-scrolltofixed bg-white">
           <div class="container">
             <nav id="menuzord-right" class="menuzord default">
-              <a class="menuzord-brand pull-left flip" href="javascript:void(0)">
+              <a class="menuzord-brand pull-left flip" href="/">
                 <img src="images/mainimages/Logo_transparent.png" alt="logoimage" />
               </a>
               <ul class="menuzord-menu">
@@ -115,9 +115,7 @@
                 <li>
                   <a href="about.html">About</a>
                 </li>
-                <li>
-                  <a href="gallery.html">Gallery</a>
-                </li>
+                
                 <li>
                   <a href="contact.html" class="btn btn-gray btn-transparent btn-theme-colored">Contact <i
                       class="fa fa-arrow-circle-right"></i></a>
@@ -195,7 +193,7 @@
                       </a></h5>
                     <ul class="list-inline font-11 mb-20">
                       <li><i class="fa fa-calendar mr-5"></i>CERTIFIED MANAGEMENT ACCOUNTANT (INDIA)</li>
-                      <li><i class="fa fa-map-marker mr-5"></i> 89 KANNUR.</li>
+                      <li><i class="fa fa-map-marker mr-5"></i> KANNUR.</li>
                     </ul>
                     <p>Prospire's CMA India course focuses on building competence in students. The CMA certification,
                       globally recognized for management accountants and financial professionals, sets the standard.
@@ -222,7 +220,7 @@
                       </a></h5>
                     <ul class="list-inline font-11 mb-20">
                       <li><i class="fa fa-calendar mr-5"></i> ENROLLED AGENT</li>
-                      <li><i class="fa fa-map-marker mr-5"></i> 89 KANNUR.</li>
+                      <li><i class="fa fa-map-marker mr-5"></i> KANNUR.</li>
                     </ul>
                     <p>The Enrolled Agent (EA) designation, provided by Prospire, is a prestigious qualification for
                       U.S. tax professionals. EAs are IRS-authorized experts who represent individuals, businesses, and
@@ -249,7 +247,7 @@
                       </a></h5>
                     <ul class="list-inline font-11 mb-20">
                       <li><i class="fa fa-calendar mr-5"></i>Business Accounting and Taxation (BAT) Course</li>
-                      <li><i class="fa fa-map-marker mr-5"></i> 89 KANNUR.</li>
+                      <li><i class="fa fa-map-marker mr-5"></i> KANNUR.</li>
                     </ul>
                     <p>The Business Accounting and Taxation (BAT) course imparts fundamental knowledge in accounting,
                       taxation, payroll policies, and economics. It equips students to manage organizations across
@@ -276,7 +274,7 @@
                       </a></h5>
                     <ul class="list-inline font-11 mb-20">
                       <li><i class="fa fa-calendar mr-5"></i>CERTIFIED ACCOUNTING TECHNICIAN</li>
-                      <li><i class="fa fa-map-marker mr-5"></i> 89 KANNUR.</li>
+                      <li><i class="fa fa-map-marker mr-5"></i> KANNUR.</li>
                     </ul>
                     <p> Prospire's CAT program offers a robust foundation in accounting principles, financial
                       management, taxation, and auditing. Our comprehensive curriculum ensures the acquisition of
@@ -303,7 +301,7 @@
                       </a></h5>
                     <ul class="list-inline font-11 mb-20">
                       <li><i class="fa fa-calendar mr-5"></i>CERTIFIED ACCA IFRS ACCOUNTANT</li>
-                      <li><i class="fa fa-map-marker mr-5"></i> 89 KANNUR.</li>
+                      <li><i class="fa fa-map-marker mr-5"></i> KANNUR.</li>
                     </ul>
                     <p>Certified ACCA IFRS Accountant program is designed for finance professionals seeking
                       expertise in International Financial Reporting Standards (IFRS). This certification ensures a deep
@@ -366,7 +364,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="about.html">About us</a></li>
                 <li><a href="course.html">Courses</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
+                
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
@@ -390,7 +388,7 @@
         <div class="container pt-10 pb-0">
           <div class="row">
             <div class="col-md-6 sm-text-center">
-              <p class="mb-4">
+              <p hidden class="mb-4">
                 &copy;
                 <a class="font-13 text-black-777 m-0" href="https://prospireeducation.in/">Prospire</a>. All Rights
                 Reserved. Designed by
