--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         <div class="header-nav-wrapper navbar-scrolltofixed bg-white">
           <div class="container">
             <nav id="menuzord-right" class="menuzord default">
-              <a class="menuzord-brand pull-left flip" href="javascript:void(0)">
-                <img src="images/mainimages/Logo_transparent.png" alt="logoimage" />
+              <a class="menuzord-brand pull-left flip" href="/">
+                <img  src="images/mainimages/Logo_transparent.png" alt="logoimage" />
               </a>
               <ul class="menuzord-menu">
                 <li class="active">
@@ -118,9 +118,7 @@
                 <li>
                   <a href="about.html">About</a>
                 </li>
-                <li>
-                  <a href="gallery.html">Gallery</a>
-                </li>
+                
                 <li>
                   <a href="contact.html" class="btn btn-gray btn-transparent btn-theme-colored">Contact <i
                       class="fa fa-arrow-circle-right"></i></a>
@@ -484,8 +482,8 @@
                     </p>
                     <br>
                     <a href="course.html"
-                      class="btn btn-default font-14 btn-theme-colored mt-10 hvr-bounce-to-left no-border">course
-                      details</a>
+                      class="btn btn-default font-14 btn-theme-colored mt-10 hvr-bounce-to-left no-border">Course
+                      Details</a>
                   </div>
                 </div>
               </div>
@@ -515,7 +513,7 @@
         <div class="container pt-70 pb-70 mt-0 ">
           <div class="section-content">
             <h2 class="mt-0 line-height-1 text-center text-uppercase mb-10 text-black-333">
-              life @ <span class="text-theme-color-2"> prospire</span>
+              life at <span class="text-theme-color-2"> prospire</span>
             </h2>
 
             <div class="row mt-10 pt-70">
@@ -884,7 +882,7 @@
                       <div class="gallery-contect">
                         <ul class="styled-icons icon-bordered icon-circled icon-sm">
                           <li>
-                            <a href="gallery.html"><i class="fa fa-link"></i></a>
+                            <a href="about.html"><i class="fa fa-link"></i></a>
                           </li>
                           <!-- <li>
                             <a  href="images/gallery/1.jpg"><i class="fa fa-arrows"></i></a>
@@ -907,7 +905,7 @@
                       <div class="gallery-contect">
                         <ul class="styled-icons icon-bordered icon-circled icon-sm">
                           <li>
-                            <a href="gallery.html"><i class="fa fa-link"></i></a>
+                            <a href="about.html"><i class="fa fa-link"></i></a>
                           </li>
                           <!-- <li>
                             <a data-rel="prettyPhoto" href="images/gallery/2.jpg"><i class="fa fa-arrows"></i></a>
@@ -930,7 +928,7 @@
                       <div class="gallery-contect">
                         <ul class="styled-icons icon-bordered icon-circled icon-sm">
                           <li>
-                            <a href="gallery.html"><i class="fa fa-link"></i></a>
+                            <a href="about.html"><i class="fa fa-link"></i></a>
                           </li>
                           <!-- <li>
                             <a data-rel="prettyPhoto" href="images/gallery/3.jpg"><i class="fa fa-arrows"></i></a>
@@ -953,7 +951,7 @@
                       <div class="gallery-contect">
                         <ul class="styled-icons icon-bordered icon-circled icon-sm">
                           <li>
-                            <a href="gallery.html"><i class="fa fa-link"></i></a>
+                            <a href="about.html"><i class="fa fa-link"></i></a>
                           </li>
                           <!-- <li>
                             <a data-rel="prettyPhoto" href="images/gallery/4.jpg"><i class="fa fa-arrows"></i></a>
@@ -976,7 +974,7 @@
                       <div class="gallery-contect">
                         <ul class="styled-icons icon-bordered icon-circled icon-sm">
                           <li>
-                            <a href="gallery.html"><i class="fa fa-link"></i></a>
+                            <a href="about.html"><i class="fa fa-link"></i></a>
                           </li>
                           <!-- <li>
                             <a data-rel="prettyPhoto" href="images/gallery/3.jpg"><i class="fa fa-arrows"></i></a>
@@ -999,7 +997,7 @@
                       <div class="gallery-contect">
                         <ul class="styled-icons icon-bordered icon-circled icon-sm">
                           <li>
-                            <a href="gallery.html"><i class="fa fa-link"></i></a>
+                            <a href="about.html"><i class="fa fa-link"></i></a>
                           </li>
                           <!-- <li>
                             <a data-rel="prettyPhoto" href="images/gallery/6.jpg"><i class="fa fa-arrows"></i></a>
@@ -1299,7 +1297,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="about.html">About us</a></li>
                 <li><a href="course.html">Courses</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
+                
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
@@ -1323,7 +1321,7 @@
         <div class="container pt-10 pb-0">
           <div class="row">
             <div class="col-md-6 sm-text-center">
-              <p class="mb-4">
+              <p hidden  class="mb-4">
                 &copy;
                 <a class="font-13 text-black-777 m-0" href="https://prospireeducation.in/">Prospire</a>. All Rights
                 Reserved. Designed by
