--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
         <div class="header-nav-wrapper navbar-scrolltofixed bg-white">
           <div class="container">
             <nav id="menuzord-right" class="menuzord default">
-              <a class="menuzord-brand pull-left flip" href="javascript:void(0)">
+              <a class="menuzord-brand pull-left flip" href="/">
                 <img src="images/mainimages/Logo_transparent.png" alt="logoimage" />
               </a>
               <ul class="menuzord-menu">
@@ -111,9 +111,7 @@
                 <li class="active">
                   <a href="about.html">About</a>
                 </li>
-                <li>
-                  <a href="gallery.html">Gallery</a>
-                </li>
+                
                 <li>
                   <a href="contact.html" class="btn btn-gray btn-transparent btn-theme-colored">Contact <i
                       class="fa fa-arrow-circle-right"></i></a>
@@ -135,7 +133,7 @@
               <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center">
                   <div class="inline-block mt-40 pb-60 pl-60 pr-60 pt-40" data-bg-color="rgba(255,255,255, 0.8)">
-                    <h1 class="text-uppercase text-theme-colored font-raleway font-weight-800 mb-0 mt-0 font-60">Life @
+                    <h1 class="text-uppercase text-theme-colored font-raleway font-weight-800 mb-0 mt-0 font-60">Life at
                       Prospire</h1>
                     <p class="font-16 text-black font-raleway letter-spacing-1 mb-20">A dynamic blend of learning,
                       collaboration, and growth, fostering a vibrant community dedicated to excellence and success.</p>
@@ -153,7 +151,7 @@
         <div class="container pt-70 pb-70 mt-0 ">
           <div class="section-content">
             <h2 class="mt-0 line-height-1 text-center text-uppercase mb-10 text-black-333">
-              life @ <span class="text-theme-color-2"> prospire</span>
+              life at <span class="text-theme-color-2"> prospire</span>
             </h2>
             <div class="row mt-10 pt-70">
               <div class="col-sm-12 col-md-6 mb-sm-20 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">
@@ -218,7 +216,7 @@
                           <i class="fa fa-building-o"></i>
                         </a>
                         <div class="icon-box-details ml-sm-0">
-                          <h5 class="icon-box-title mt-15 letter-space-1 font-weight-600 mb-5">ndustry-Relevant Training
+                          <h5 class="icon-box-title mt-15 letter-space-1 font-weight-600 mb-5">Industry-Relevant Training
                           </h5>
                           <p class="text-gray">Gain comprehensive, industry-specific training from experienced
                             instructors, equipping you with practical knowledge and skills.</p>
@@ -465,7 +463,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="about.html">About us</a></li>
                 <li><a href="course.html">Courses</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
+                
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
@@ -489,7 +487,7 @@
         <div class="container pt-10 pb-0">
           <div class="row">
             <div class="col-md-6 sm-text-center">
-              <p class="mb-4">
+              <p hidden class="mb-4">
                 &copy;
                 <a class="font-13 text-black-777 m-0" href="https://prospireeducation.in/">Prospire</a>. All Rights
                 Reserved. Designed by
