--- a/acca_ifrs.html
+++ b/acca_ifrs.html
@@ -77,7 +77,7 @@
         <div class="header-nav-wrapper navbar-scrolltofixed bg-white">
           <div class="container">
             <nav id="menuzord-right" class="menuzord default">
-              <a class="menuzord-brand pull-left flip" href="javascript:void(0)">
+              <a class="menuzord-brand pull-left flip" href="/">
                 <img src="images/mainimages/Logo_transparent.png" alt="NOTFOUNT" />
               </a>
               <ul class="menuzord-menu">
@@ -110,9 +110,7 @@
                 <li>
                   <a href="about.html">About</a>
                 </li>
-                <li>
-                  <a href="gallery.html">Gallery</a>
-                </li>
+                
                 <li>
                   <a href="contact.html" class="btn btn-gray btn-transparent btn-theme-colored">Contact <i
                       class="fa fa-arrow-circle-right"></i></a>
@@ -191,7 +189,7 @@
                   <div class="col-md-8 col-md-offset-2 text-center">
                     <div class="inline-block mt-40 pb-60 pl-60 pr-60 pt-40" data-bg-color="rgba(169, 169, 169, 0.8)">
                       <h2 class="text-uppercase text-theme-colored font-raleway mb-0 mt-0">Who’s it for?</h2>
-                      <!-- <h1 class="text-uppercase text-theme-colored font-raleway font-weight-800 mb-0 mt-0 font-60">Life @
+                      <!-- <h1 class="text-uppercase text-theme-colored font-raleway font-weight-800 mb-0 mt-0 font-60">Life at
                         Prospire</h1> -->
                       <p class="font-16 text-black font-raleway letter-spacing-1 mb-20">For professionals in accounting
                         or auditing, eligibility for the qualification extends to those qualified under national
@@ -595,7 +593,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="about.html">About us</a></li>
                 <li><a href="course.html">Courses</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
+                
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
@@ -619,7 +617,7 @@
         <div class="container pt-10 pb-0">
           <div class="row">
             <div class="col-md-6 sm-text-center">
-              <p class="mb-4">
+              <p hidden class="mb-4">
                 &copy;
                 <a class="font-13 text-black-777 m-0" href="https://prospireeducation.in/">Prospire</a>. All Rights
                 Reserved. Designed by
