--- a/gallery.html
+++ b/gallery.html
@@ -86,7 +86,7 @@
         <div class="header-nav-wrapper navbar-scrolltofixed bg-white">
           <div class="container">
             <nav id="menuzord-right" class="menuzord default">
-              <a class="menuzord-brand pull-left flip" href="javascript:void(0)">
+              <a class="menuzord-brand pull-left flip" href="/">
                 <img src="images/mainimages/Logo_transparent.png" alt="logoimage" />
               </a>
               <ul class="menuzord-menu">
@@ -355,7 +355,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="about.html">About us</a></li>
                 <li><a href="course.html">Courses</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
+                
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
@@ -379,7 +379,7 @@
         <div class="container pt-10 pb-0">
           <div class="row">
             <div class="col-md-6 sm-text-center">
-              <p class="mb-4">
+              <p hidden class="mb-4">
                 &copy;
                 <a class="font-13 text-black-777 m-0" href="https://prospireeducation.in/">Prospire</a>. All Rights
                 Reserved. Designed by
