--- a/gallery.html
+++ b/gallery.html
@@ -10,7 +10,8 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <meta name="description" content="prospire | Education & Institution" />
   <meta name="keywords" content="academy, course, education, education html theme, #, learning," />
-
+  <!-- remove this comment when the file used for website -->
+  <meta name="robots" content="noindex, nofollow">
 
   <!-- Page Title -->
   <title>prospire | Education & Institution</title>
