--- a/gallery.html
+++ b/gallery.html
@@ -1,83 +1,56 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html dir="ltr" lang="en">
 
-<!-- page-gallery-4col-tiles18:36-->
 
 <head>
 
-  <!-- Meta Tags -->
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <meta name="description" content="prospire | Education & Institution" />
   <meta name="keywords" content="academy, course, education, education html theme, #, learning," />
-  <!-- remove this comment when the file used for website -->
   <meta name="robots" content="noindex, nofollow">
 
-  <!-- Page Title -->
   <title>prospire | Education & Institution</title>
 
-  <!-- Favicon and Touch Icons -->
   <link href="images/favicon.png" rel="shortcut icon" type="image/png">
   <link href="images/apple-touch-icon.png" rel="apple-touch-icon">
   <link href="images/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72">
   <link href="images/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114">
   <link href="images/apple-touch-icon-144x144.png" rel="apple-touch-icon" sizes="144x144">
 
-  <!-- Stylesheet -->
   <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="css/jquery-ui.min.css" rel="stylesheet" type="text/css">
   <link href="css/animate.css" rel="stylesheet" type="text/css">
   <link href="css/css-plugin-collections.css" rel="stylesheet" />
-  <!-- CSS | menuzord megamenu skins -->
   <link id="menuzord-menu-skins" href="css/menuzord-skins/menuzord-rounded-boxed.css" rel="stylesheet" />
-  <!-- CSS | Main style file -->
   <link href="css/style-main.css" rel="stylesheet" type="text/css">
-  <!-- CSS | Preloader Styles -->
   <link href="css/preloader.css" rel="stylesheet" type="text/css">
-  <!-- CSS | Custom Margin Padding Collection -->
   <link href="css/custom-bootstrap-margin-padding.css" rel="stylesheet" type="text/css">
-  <!-- CSS | Responsive media queries -->
   <link href="css/responsive.css" rel="stylesheet" type="text/css">
-  <!-- CSS | Style css. This is the file where you can place your own custom css code. Just uncomment it and use it. -->
-  <!-- <link href="css/style.css" rel="stylesheet" type="text/css"> -->
-
-  <!-- Revolution Slider 5.x CSS settings -->
   <link href="js/revolution-slider/css/settings.css" rel="stylesheet" type="text/css" />
   <link href="js/revolution-slider/css/layers.css" rel="stylesheet" type="text/css" />
   <link href="js/revolution-slider/css/navigation.css" rel="stylesheet" type="text/css" />
 
-  <!-- CSS | Theme Color -->
   <link href="css/colors/theme-skin-color-set-1.css" rel="stylesheet" type="text/css">
 
-  <!-- external javascripts -->
   <script src="js/jquery-2.2.4.min.js"></script>
   <script src="js/jquery-ui.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <!-- JS | jquery plugin collection for this theme -->
   <script src="js/jquery-plugin-collection.js"></script>
 
-  <!-- Revolution Slider 5.x SCRIPTS -->
   <script src="js/revolution-slider/js/jquery.themepunch.tools.min.js"></script>
   <script src="js/revolution-slider/js/jquery.themepunch.revolution.min.js"></script>
 
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-<![endif]-->
 </head>
 
 <body class="">
   <div id="wrapper" class="clearfix">
-    <!-- preloader -->
     <div id="preloader">
       <div id="spinner">
         <img alt="" src="images/preloaders/2.gif">
       </div>
     </div>
 
-    <!-- Header -->
     <header id="header" class="header">
       <div class="header-top bg-theme-color-2 sm-text-center">
         <div class="container">
@@ -135,14 +108,11 @@
       </div>
     </header>
 
-    <!-- Start main-content -->
     <div class="main-content">
 
 
-      <!-- Section: inner-header -->
       <section class="inner-header divider parallax layer-overlay overlay-dark-5" data-bg-img="images/bg/bg3.jpg">
         <div class="container pt-70 pb-20">
-          <!-- Section Content -->
           <div class="section-content">
             <div class="row">
               <div class="col-md-12">
@@ -157,24 +127,19 @@
         </div>
       </section>
 
-      <!-- Gallery Grid 3 -->
       <section>
         <div class="container">
           <div class="section-content">
             <div class="row">
               <div class="col-md-12">
-                <!-- Portfolio Filter -->
                 <div class="portfolio-filter">
                   <a href="#" class="active" data-filter="*">All</a>
                   <a href="#branding" class="" data-filter=".branding">Campus</a>
                   <a href="#design" class="" data-filter=".design">festival</a>
                   <a href="#photography" class="" data-filter=".photography">Achievements</a>
                 </div>
-                <!-- End Portfolio Filter -->
 
-                <!-- Portfolio Gallery Grid -->
                 <div id="grid" class="gallery-isotope masonry grid-4 gutter clearfix">
-                  <!-- Portfolio Item Start -->
                   <div class="gallery-item photography">
                     <div class="thumb">
                       <img class="img-fullwidth" src="images/gallery/1.jpg" alt="project">
@@ -182,17 +147,12 @@
                       <div class="icons-holder">
                         <div class="icons-holder-inner">
                           <div class="styled-icons icon-sm icon-dark icon-circled icon-theme-colored">
-                            <!-- <a data-lightbox="image" href="images/gallery/1.jpg"><i class="fa fa-plus"></i></a>
-                          <a href="#"><i class="fa fa-link"></i></a> -->
                           </div>
                         </div>
                       </div>
                       <a class="hover-link" data-lightbox="image" href="images/gallery/1.jpg">View more</a>
                     </div>
                   </div>
-                  <!-- Portfolio Item End -->
-
-                  <!-- Portfolio Item Start -->
                   <div class="gallery-item branding wide">
                     <div class="thumb">
                       <img class="img-fullwidth" src="images/gallery/w2.jpg" alt="project">
@@ -200,17 +160,12 @@
                       <div class="icons-holder">
                         <div class="icons-holder-inner">
                           <div class="styled-icons icon-sm icon-dark icon-circled icon-theme-colored">
-                            <!-- <a href="#"><i class="fa fa-link"></i></a>
-                          <a href="#"><i class="fa fa-heart-o"></i></a> -->
                           </div>
                         </div>
                       </div>
                       <a class="hover-link" data-lightbox="image" href="images/gallery/w2.jpg">View more</a>
                     </div>
                   </div>
-                  <!-- Portfolio Item End -->
-
-                  <!-- Portfolio Item Start -->
                   <div class="gallery-item design">
                     <div class="thumb">
                       <img class="img-fullwidth" src="images/gallery/3.jpg" alt="project">
@@ -218,16 +173,12 @@
                       <div class="icons-holder">
                         <div class="icons-holder-inner">
                           <div class="styled-icons icon-sm icon-dark icon-circled icon-theme-colored">
-                            <!-- <a href="#"><i class="fa fa-link"></i></a> -->
-                          </div>
+=                          </div>
                         </div>
                       </div>
                       <a class="hover-link" data-lightbox="image" href="images/gallery/3.jpg">View more</a>
                     </div>
                   </div>
-                  <!-- Portfolio Item End -->
-
-                  <!-- Portfolio Item Start -->
                   <div class="gallery-item photography">
                     <div class="thumb">
                       <img class="img-fullwidth" src="images/gallery/h1.jpg" alt="project">
@@ -235,15 +186,11 @@
                       <div class="icons-holder">
                         <div class="icons-holder-inner">
                           <div class="styled-icons icon-sm icon-dark icon-circled icon-theme-colored">
-                            <!-- <a class="popup-youtube" href="http://www.youtube.com/watch?v=0O2aH4XLbto"><i class="fa fa-youtube-play"></i></a> -->
                           </div>
                         </div>
                       </div>
                     </div>
                   </div>
-                  <!-- Portfolio Item End -->
-
-                  <!-- Portfolio Item Start -->
                   <div class="gallery-item branding">
                     <div class="thumb">
                       <img class="img-fullwidth" src="images/gallery/h2.jpg" alt="project">
@@ -251,15 +198,11 @@
                       <div class="icons-holder">
                         <div class="icons-holder-inner">
                           <div class="styled-icons icon-sm icon-dark icon-circled icon-theme-colored">
-                            <!-- <a class="popup-vimeo" href="https://vimeo.com/45830194"><i class="fa fa-play"></i></a> -->
                           </div>
                         </div>
                       </div>
                     </div>
                   </div>
-                  <!-- Portfolio Item End -->
-
-                  <!-- Portfolio Item Start -->
                   <div class="gallery-item design">
                     <div class="thumb">
                       <div class="flexslider-wrapper">
@@ -278,15 +221,11 @@
                       <div class="icons-holder">
                         <div class="icons-holder-inner">
                           <div class="styled-icons icon-sm icon-dark icon-circled icon-theme-colored">
-                            <!-- <a href="#"><i class="fa fa-picture-o"></i></a> -->
                           </div>
                         </div>
                       </div>
                     </div>
                   </div>
-                  <!-- Portfolio Item End -->
-
-                  <!-- Portfolio Item Start -->
                   <div class="gallery-item photography">
                     <div class="thumb">
                       <img class="img-fullwidth" src="images/gallery/1.jpg" alt="project">
@@ -294,17 +233,13 @@
                       <div class="icons-holder">
                         <div class="icons-holder-inner">
                           <div class="styled-icons icon-sm icon-dark icon-circled icon-theme-colored">
-                            <!-- <a data-lightbox="image" href="images/gallery/1.jpg"><i class="fa fa-plus"></i></a>
-                          <a href="#"><i class="fa fa-link"></i></a> -->
                           </div>
                         </div>
                       </div>
                       <a class="hover-link" data-lightbox="image" href="images/gallery/2.jpg">View more</a>
                     </div>
                   </div>
-                  <!-- Portfolio Item End -->
                 </div>
-                <!-- End Portfolio Gallery Grid -->
 
               </div>
             </div>
@@ -313,16 +248,12 @@
       </section>
 
     </div>
-    <!-- end main-content -->
-
-    <!-- Footer -->
     <footer id="footer" class="footer bg-black-222">
       <div class="container pt-70 pb-30">
         <div class="row border-bottom-black">
           <div class="col-sm-6 col-md-4">
             <div class="widget dark">
               <h5 class="widget-title mb-10">Contact Us</h5>
-              <!-- <img class="mt-10 mb-20" alt="" src="images/mainimages/Logo_transparent.png"> -->
               <ul class="list-inline mt-5">
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-map-marker  text-theme-colored mr-5"></i> <a
                     class="text-gray" href="#">Near Nandilath G Mart, Thavakkara Road, Caltex, Kannur</a> </li>
@@ -393,14 +324,6 @@
     </footer>
     <a class="scrollToTop" href="#"><i class="fa fa-angle-up"></i></a>
   </div>
-  <!-- end wrapper -->
-
-  <!-- Footer Scripts -->
-  <!-- JS | Custom script for all pages -->
   <script src="js/custom.js"></script>
-
 </body>
-
-<!-- page-gallery-4col-tiles18:36-->
-
-</html>
+</html> -->
